# opengl_picasa_cpp

./: CMakeLists.txt  LICENSE  README.md
include/: picasa_app.h  shader.h  texture.h  ui.h
shaders/: image.frag
src/: main.cpp  picasa_app.cpp  shader.cpp  texture.cpp  ui.cpp
